# desktop-video-registrar

./: .gitignore  CMakeLists.txt  README.md  build_simple.sh  wsjcpp.yml
.github/workflows/: cmake-single-platform.yml
misc/: test_gst_video_from_webcam.sh
src/: main.cpp
src.wsjcpp/: CMakeLists.txt
src/gst_elements/: gst_elements.h  videoregistrar_gst_element.h  videoregistrar_gst_element_timeoverlay.cpp  videoregistrar_gst_element_timeoverlay.h
